# eva

./: .gitignore  README.md  dune-project  eva.opam
lib/: ast.ml  codegen.ml  dune  expr.ml  intn.ml  lexer.mll  op.ml  parser.mly
samples/: Makefile  the_answer.evm
test/: dune  test_codegen.ml  test_eva.ml  test_intn.ml  test_parser.ml
